--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -84,19 +84,19 @@
 ??? question "如何理解群的四个性质？"
 
     === "文字描述"
-    
+
         1. 封闭性：群内**任意两个元素**或两个以上的元素（相同的或不同的）的结合（积）都是**该集合的**一个元素。即：假设对于群 G 操作（运算）是*，对于 G 里的任意元素 $a,b$，那么 $a*b$ 和 $b*a$ 都必须是 G 的元素。
-    
+
         2. 结合律：虽然群元素不一定要求满足交换律，但必须满足**结合律**，即对 G 中任意元素 $a,b,c$ 都有 $(a*b)*c=a*(b*c)$。
-    
+
         3. 存在单位元：集合 G 内**存在**一个单位元素 $e$，它和集合中任何一个元素的积都等于该元素本身，即对于 G 中每个元素 $a$ 都有 $e*a=a*e=a$。
-    
+
         4. 可逆性：对 G 中**每个元素 $a$**，在 G 中都有元素 $a^{-1}$，使 $a^{-1}*a=a*a^{-1}=e$。
-    
+
     === "进一步理解"
-    
+
         1. 群的性质：群有很多性质，例如“群满足消去律”“单位元 $e$ 是唯一幂等元”“群同态保持单位元/逆元”等，这些性质后面会详细介绍。
-    
+
         2. 群的判定：目前，我们使用了**“逐一验证每一个性质”**的方法判定一个代数系统是否为群；与此同时，还有其他更为简便的方法，例如使用同态、逆元、线性方程、消去律等进行群的判定，这些方法仍然在后面介绍。
 
 下面，我们来**通过一个具体的元素集合和二元运算实例**，加深一下对群的概念和四个性质的理解。
@@ -104,47 +104,47 @@
 ???+ note "练习 1."
 
     === "题目"
-    
+
         设 A 是所有奇数构成的集合，B 是所有偶数构成的集合，请问 A、B 关于整数的加法运算是否是群？请证明你的结论。
-    
+
     === "思路"
-    
+
         在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
-    
+
         **技巧：**如何规范地验证群的性质呢？例如：我们都知道，奇数与奇数的和是偶数，它说明了“奇数加法不满足封闭性”，但是，**如何将这句话用规范的数学语言描述呢？**
-    
+
         在高中时，我们经常使用 $2n+1\ (n\in \Bbb Z)$ 的方法来表示一个奇数，在验证群的性质时，我们也常用这种方法进行数学描述。我们假设题目中的集合 A 中有两个元素 $a,b$（它们是集合中任意的两个元素），这样，我们就可以用 $a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$，来表示 $a$ 和 $b$ 了；进一步地，$a+b=2n+1+2m+1=2(n+m+1)\notin A$，它规范地使用了数学语言，描述了“奇数加法不满足封闭性”的证明过程。
-    
+
         其他性质的验证也与此同理。
-    
+
         这种数学语言在验证群的性质中是**常见**的。
-    
+
         此外，在验证“存在单位元”性质时，我们要找到这个单位元；在验证“可逆性”性质时，我们要对一个一般的集合元素找到它的逆元，从而说明集合中的每一个元素都有逆元。
-    
+
     === "解答"
-    
+
         A 关于整数的加法运算不是群；B 关于整数的加法运算是群。
-    
+
         证明：
-    
+
         （1）对于 $\forall a,b\in A$，设 $a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$
-    
+
         则：$a+b=2n+1+2m+1=2(n+m+1)\notin A$
-    
+
         不满足封闭性，因此 A 关于整数的加法运算不是群。
-    
+
         （2）对于 $\forall a,b,c\in B$，设 $a=2p,\ b=2q,\ c=2r\ (p,q,r\in \Bbb Z)$
-    
+
         则：①$a+b=2p+2q=2(p+q)\in B$，满足封闭性；
-    
+
         ②$(a+b)+c=(2p+2q)+2r=2p+2q+2r=2p+(2q+2r)=a+(b+c)$，满足结合律；
-    
+
         ③$\exists e=0,\ e\in B,\ 0+2p=2p+0=2p$，0 为 B 的单位元，满足存在单位元；
-    
+
         ④$\forall a\in B,\ a=2p,\ \exists(-2p)\in B$ 满足 $2p+(-2p)=(-2p)+2p=0$，此时 $-2p$ 为 $2p$ 的逆元，满足可逆性。
-    
+
         满足群的四个性质，因此 B 关于整数的加法运算是群。
-    
+
         证毕。
 
 #### 2.2 阿贝尔群的概念
@@ -171,25 +171,25 @@
 ??? question "如何理解映射合成运算？"
 
     === "定义"
-    
+
         **映射合成运算：**设 $f:A\rightarrow B,\ g:B\rightarrow C$ 为两个映射，称 $(g·f)(a):=g(f(a)),\forall a\in A$ 为映射 $g$ 与 $f$ 的**乘积**或**合成**。
-    
+
         映射合成运算满足结合律，但 $n\geq 3$ 时不满足交换律。
-    
+
         $h·(g·f)=(h·g)·f$.
-    
+
     === "举例"
-    
+
         $X$ 是大小为 $n$ 的有限集合，最简单的例子：$X=\{1,2,…,n\}$.
-    
+
         （1）置换的例子：
-    
+
         设 $X=\{1,2,3\}$，此时 $S_{3}$ 中的一个元素 $\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}\in S_{3}$，记这个元素为 $e$，它表示的置换是：$e(1)=2,\quad e(2)=1,\quad e(3)=3$.
-    
+
         （2）$S_{n}$ 的例子：
-    
+
         $S_{n}=\{x上的所有置换\}$，我们以 $n=3$ 为例：
-    
+
         $S_{3}=\left\{
             \begin{pmatrix} 1,2,3 \\ 1,2,3 \end{pmatrix},
             \begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix},
@@ -198,200 +198,200 @@
             \begin{pmatrix} 1,2,3 \\ 2,3,1 \end{pmatrix},
             \begin{pmatrix} 1,2,3 \\ 3,1,2 \end{pmatrix}
             \right\}$
-    
+
         （3）映射合成运算的例子：
-    
+
         注意映射合成在计算时**从右向左**计算，$(g·f)(a):=g(f(a))$，例如：
-    
+
         $\begin{pmatrix} \color{red}{1}\color{black},\color{green}{2}\color{black},\color{blue}{3} \\ \color{red}{2}\color{black},\color{green}{1}\color{black},\color{blue}{3} \end{pmatrix}\begin{pmatrix} \color{red}{1}\color{black},\color{blue}{2}\color{black},\color{green}{3} \\ \color{red}{1}\color{black},\color{blue}{3}\color{black},\color{green}{2} \end{pmatrix}=\begin{pmatrix} \color{red}{1}\color{black},\color{blue}{2}\color{black},\color{green}{3} \\ \color{red}{2}\color{black},\color{blue}{3}\color{black},\color{green}{1} \end{pmatrix}$
 
 ??? question "上述群、阿贝尔群各例的证明过程（简略）？"
 
     === "$(\Bbb Z, + )$"
-    
+
         1. 封闭性：对 $\forall a,b\in \Bbb Z$，有 $a+b\in \Bbb Z$；
         2. 结合律：对 $\forall a,b,c\in \Bbb Z$，有 $(a+b)+c=a+(b+c)$；
         3. 0是单位元：对 $\forall a\in \Bbb Z$，有 $0+a=a+0=a$；
         4. 可逆性：对 $\forall a\in \Bbb Z$，有 $(-a)+a=a+(-a)=0$，因此 $-a$ 是 $a$ 的逆元；
         5. 交换律：对 $\forall a,b\in \Bbb Z$，有 $a+b=b+a$。
-    
+
     === "$(\Bbb Z_{n}, + )$"
-    
+
         介绍同余性质时再证明。
-    
+
     === "$(\Bbb Z^{*}_{n}, · )$"
-    
+
         介绍同余性质时再证明。
-    
+
     === "$Mat_{n}(\Bbb R)$ 关于矩阵加法运算"
-    
+
         1. 封闭性：设 $A,B\in Mat_{n}(\Bbb R)$，则 $A,B$ 是 $n\times n$ 矩阵，于是 $A+B$ 也是 $n\times n$ 矩阵，从而 $A+B\in Mat_{n}(\Bbb R)$.
         2. 结合律：因为矩阵的加法满足结合律，所以 $Mat_{n}(\Bbb R)$ 中的加法运算也满足结合律。
         3. 全 0 矩阵是单位元：全 0 矩阵 $0_{n\times n}\in Mat_{n}(\Bbb R)$，且对任意的矩阵 $A\in Mat_{n}(\Bbb R)$，有：$0_{n\times n}+A=A+0_{n\times n}=A$，所以全 0 矩阵 $0_{n\times n}$ 是 $Mat_{n}(\Bbb R)$ 的单位元。
         4. 可逆性：对于 $\forall A\in Mat_{n}(\Bbb R)$，$A$ 是 $n\times n$ 矩阵，于是 $-A$ 存在且是 $n\times n$ 矩阵，从而 $-A\in Mat_{n}(\Bbb R)$，且：$A+(-A)=(-A)+A=0_{n\times n}$，所以 $Mat_{n}(\Bbb R)$ 中的每个元素在 $Mat_{n}(\Bbb R)$ 中都可逆。
         5. 交换律：因为矩阵的加法满足交换律，所以 $Mat_{n}(\Bbb R)$ 中的加法运算也满足交换律。
-    
+
     === "$GL(n,\Bbb R)$ 关于矩阵乘法运算"
-    
+
         2. 封闭性：设 $A,B\in GL(n,\Bbb R)$，则 $A,B$ 可逆，于是 $AB$ 也可逆，从而 $AB\in GL(n,\Bbb R)$.
         3. 结合律：因为矩阵的乘法满足结合律，所以 $GL(n,\Bbb R)$ 中的乘法运算也满足结合律。
         4. 单位矩阵是单位元：单位矩阵 $E\in GL(n,\Bbb R)$，且对任意的矩阵 $A\in GL(n,\Bbb R)$，有：$EA=AE=A$，所以单位矩阵 $E$ 是 $GL(n,\Bbb R)$ 的单位元。
         5. 可逆性：对于 $\forall A\in GL(n,\Bbb R)$，$A$ 可逆，于是 $A^{-1}$ 存在且可逆，从而 $A^{-1}\in GL(n,\Bbb R)$，且：$A\cdot A^{-1}=A^{-1}\cdot A=E$，所以 $GL(n,\Bbb R)$ 中的每个元素在 $GL(n,\Bbb R)$ 中都可逆。
-    
+
         注：相似题目，见“练习3”.
-    
+
     === "$S_{n}$ 关于映射合成运算"
-    
+
         $S_{1},S_{2}$是阿贝尔群，由于它们的形式简单，因此是容易证得的。
-    
+
         当 $n\geq 3$ 时，证明过程见“练习2”。
 
 ??? question "如何证明一个代数系统不是阿贝尔群？（以 $S_{3}$ 为例）"
 
     我们一般通过对某个性质**举一个反例**的方法，证明一个代数系统不是阿贝尔群。
-    
+
     以 $S_{3}$ 为例，证明如下：
-    
+
     设 $X=\{x_{1},x_{2},x_{3}\}$，令 $e,e'\in S_{3}$ 满足：
-    
+
     $e(x_{1})=x_{1},\quad e(x_{2})=x_{3},\quad e(x_{3})=x_{2}$，
-    
+
     $e'(x_{1})=x_{2},\quad e'(x_{2})=x_{3},\quad e'(x_{3})=x_{1}$，
-    
+
     那么：$ee'(x_{1})=e(x_{2})=x_{3},\quad e'e(x_{1})=e'(x_{1})=x_{2}$.
-    
+
     因此：$ee'\not=e'e$.
-    
+
     所以，$S_{3}$ 不是阿贝尔群。
-    
+
     证毕。
 
 ???+ note "练习 2."
 
     === "题目"
-    
+
         证明 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
-    
+
     === "思路"
-    
+
         刚才我们已经提到，一般通过对某个性质**举一个反例**的方法，证明一个代数系统不是阿贝尔群，这个反例可以是很具体的。
-    
+
         我们已经证明过 $S_{3}$ 不是阿贝尔群了，当 $n>3$ 时，$S_{n}$ 与 $S_{3}$ 的区别，无非就是又**多了几列映射**，我们只需要让多出的这几列映射为对自身的映射，不去关注它（方便证明过程中的计算），从而只关注前 3 列的映射关系。
-    
+
         此时，再证明它不满足交换律，就和证明 $S_{3}$ 不满足交换律一样简单了。
-    
+
     === "解答"
-    
+
         证明：
-    
+
         先证 $n=3$ 时，$S_{n}$ 不是阿贝尔群。
-    
+
         $\begin{pmatrix} 1,2,3 \\ 1,3,2 \end{pmatrix},\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}\in S_{3}$
-    
+
         $\begin{pmatrix} 1,2,3 \\ 1,3,2 \end{pmatrix}\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}=\begin{pmatrix} 1,2,3 \\ 3,1,2 \end{pmatrix}$
-    
+
         $\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}\begin{pmatrix} 1,2,3 \\ 1,3,2 \end{pmatrix}=\begin{pmatrix} 1,2,3 \\ 2,3,1 \end{pmatrix}$
-    
+
         且：$\begin{pmatrix} 1,2,3 \\ 3,1,2 \end{pmatrix}\not=\begin{pmatrix} 1,2,3 \\ 2,3,1 \end{pmatrix}$，不满足交换律。
-    
+
         因此 $S_{3}$ 不是阿贝尔群。
-    
+
         当 $n>3$ 时，令满足 $i>3$ 的所有第 $i$ 列，均为对自身的映射。
-    
+
         即：$\begin{pmatrix} 1,2,3,\ldots\ldots,n \\ 1,3,2,\underbrace{\ldots\ldots,n}_{对自身映射} \end{pmatrix},\begin{pmatrix} 1,2,3,\ldots\ldots,n \\ 2,1,3,\underbrace{\ldots\ldots,n}_{对自身映射} \end{pmatrix}\in S_{n}$
-    
+
         $\begin{pmatrix} 1,2,3,\ldots,n \\ 1,3,2,\ldots,n \end{pmatrix}\begin{pmatrix} 1,2,3,\ldots,n \\ 2,1,3,\ldots,n \end{pmatrix}=\begin{pmatrix} 1,2,3,\ldots,n \\ 3,1,2,\ldots,n \end{pmatrix}$
-    
+
         $\begin{pmatrix} 1,2,3,\ldots,n \\ 2,1,3,\ldots,n \end{pmatrix}\begin{pmatrix} 1,2,3,\ldots,n \\ 1,3,2,\ldots,n \end{pmatrix}=\begin{pmatrix} 1,2,3,\ldots,n \\ 2,3,1,\ldots,n \end{pmatrix}$
-    
+
         且：$\begin{pmatrix} 1,2,3,\ldots\ldots,n \\ 3,1,2,\underbrace{\ldots\ldots,n}_{对自身映射} \end{pmatrix}\not=\begin{pmatrix} 1,2,3,\ldots\ldots,n \\ 2,3,1,\underbrace{\ldots\ldots,n}_{对自身映射} \end{pmatrix}$ 不满足交换律。
-    
+
         因此 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
-    
+
         证毕。
 
 ???+ note "练习 3."
 
     === "题目"
-    
+
         假设 $\mathscr A$ 是所有形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 $2\times 2$ 矩阵构成的集合，其中 $a\not=0$.对于实数上的矩阵乘法运算，(a)证明 $\mathscr A$ 是群。(b)$\mathscr A$ 是否是阿贝尔群？请证明你的结论。
-    
+
     === "思路"
-    
+
         看到这个形式，可以想到我们前面学到的：
-    
+
         $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n\times n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n\times n}$；它是一个一般线性群。
-    
+
         它要求集合中的元素是 $n\times n$ 可逆矩阵，而这道题目中的元素是形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 $2\times 2$ 矩阵。
-    
+
         回想一下线性代数的知识：我们可以用“行列式不等于零的矩阵可逆”的方法，计算行列式：$\begin{vmatrix} a & b \\ 0 & 1 \\ \end{vmatrix}=a-0=a$，又因为题目中说 $a\not=0$，所以它是一个 $2\times 2$ 可逆矩阵的集合，根据前面学的结论，它是群，但不是阿贝尔群。
-    
+
         得到了结论，我们如何证明呢？
-    
+
         事实上，在证明 $GL(n,\Bbb R)$ 的封闭、可逆等性质时，还可以充分利用**“行列式不等于零的矩阵可逆”**的性质，这样的思路是常见的。
-    
+
     === "解答"
-    
+
         （a）证明：
-    
+
         对于 $\forall p,q,r\in \mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix},q=\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix},r=\begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix}$，其中 $p_{1},q_{1},r_{1}\not=0$.
-    
+
         ① $p\cdot q=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}$
-    
+
         $\because p_{1}q_{1}\not=0,\quad \begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\in \mathscr A$
-    
+
         $\therefore$ 满足封闭性。
-    
+
         ② $(p\cdot q)\cdot r = \left(\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}\right)\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix} = \begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix} = \begin{bmatrix} p_{1}q_{1}r_{1} & p_{1}q_{1}r_{2}+p_{1}q_{2}+p_{2} \\ 0 & 1 \end{bmatrix}$
-    
+
         $p\cdot (q\cdot r) = \begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \left(\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix}\right) = \begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1}r_{1} & q_{1}r_{2}+q_{2} \\ 0 & 1 \end{bmatrix}=\begin{bmatrix} p_{1}q_{1}r_{1} & p_{1}q_{1}r_{2}+p_{1}q_{2}+p_{2} \\ 0 & 1 \end{bmatrix}$
-    
+
         $\because (p\cdot q)\cdot r = p\cdot (q\cdot r)$
-    
+
         $\therefore$ 满足结合律。
-    
+
         ③ $\exists e\in \mathscr A,\quad e=\begin{bmatrix} 1 & 0 \\ 0 & 1 \end{bmatrix},$ 使得 $\forall p\in\mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}$
-    
+
         $e\cdot p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix},\quad p\cdot e=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}$
-    
+
         $e\cdot p=p\cdot e=p$
-    
+
         $e$ 为 $\mathscr A$ 的单位元。
-    
+
         $\therefore$ 满足存在单位元。
-    
+
         ④ 对于 $\forall p\in\mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}$
-    
+
         $\exists p'\in\mathscr A,\quad p'=\begin{bmatrix} \frac{1}{p_{1}} & -\frac{p_{2}}{p_{1}} \\ 0 & 1 \end{bmatrix}$，满足：
-    
+
         $p\cdot p'=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} \frac{1}{p_{1}} & -\frac{p_{2}}{p_{1}} \\ 0 & 1 \end{bmatrix}=\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ \end{bmatrix}=e$
-    
+
         $p'\cdot p=\begin{bmatrix} \frac{1}{p_{1}} & -\frac{p_{2}}{p_{1}} \\ 0 & 1 \end{bmatrix}\cdot \begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ \end{bmatrix}=e$
-    
+
         $p\cdot p'=p'\cdot p=e$，$p'$ 为 $p$ 的逆元。
-    
+
         $\therefore$ 满足可逆性。
-    
+
         综上，$\mathscr A$ 是群。
-    
+
         （b）$\mathscr A$ 不是阿贝尔群。
-    
+
         证明：
-    
+
         对于 $\forall p,q\in\mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix},q=\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}$
-    
+
         $p\cdot q=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}$
-    
+
         $q\cdot p=\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} p_{1}q_{1} & p_{2}q_{1}+q_{2} \\ 0 & 1 \\ \end{bmatrix}$
-    
+
         $\begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\not=\begin{bmatrix} p_{1}q_{1} & p_{2}q_{1}+q_{2} \\ 0 & 1 \\ \end{bmatrix}$，（$p_{1}q_{2}+p_{2}\not=p_{2}q_{1}+q_{2}$ 时）
-    
+
         $\therefore p\cdot q\not=q\cdot p$，（$p_{1}q_{2}+p_{2}\not=p_{2}q_{1}+q_{2}$ 时）
-    
+
         $\therefore$ 不满足交换律。
-    
+
         $\mathscr A$ 不是阿贝尔群。
-    
+
         证毕。
 
 ### 3. 环和域
@@ -442,16 +442,18 @@ $(\Bbb F,+,\cdot)$ 是域，**等价于**下面的三个条件同时满足：
 
 这一小节简要了解就可以了。
 
-1. 由数论问题发展出抽象代数。
+1.由数论问题发展出抽象代数。
 
-   Galois 证明了方程次数 $\geq 5$ 时不存在根式求解公式。
+Galois 证明了方程次数 $\geq 5$ 时不存在根式求解公式。
 
-2. 数论问题为抽象代数提供具体的例子。
+2.数论问题为抽象代数提供具体的例子。
 
-   例如：
+例如：
 
-   $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合，$+$ 表示 $mod\ n$ 加法运算。
+$(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合，$+$ 表示 $mod\ n$ 加法运算。
 
-   $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} \mid x 与 n 互素\}$，$·$ 表示 $mod\ n$ 乘法运算。当 $n$ 是素数时，它是循环群。
+$(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} \mid x 与 n 互素\}$，$·$ 表示 $mod\ n$ 乘法运算。当 $n$ 是素数时，它是循环群。
 
-   $(\Bbb Z_{p}, +,\cdot)$ 是域。其中 $p$ 为素数。
+$(\Bbb Z_{p}, +,\cdot)$ 是域。其中 $p$ 为素数。
+
+## Chapter 4. 整数理论
