--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -153,9 +153,9 @@
 
 首先，这个代数系统需要是一个群（需要满足群的四个性质），此外，如果它还满足**交换律**，那么它称为阿贝尔群。
 
-| 性质   | 含义                                          |
-| ------ | --------------------------------------------- |
-| 交换律 | 对 $\forall a,b\in G$，有 $a\cdot b=b\cdot a$ |
+| <div style="width:200px">性质</div> |      <div style="width:800px">含义</div>      |
+| :---------------------------------: | :-------------------------------------------: |
+|               交换律                | 对 $\forall a,b\in G$，有 $a\cdot b=b\cdot a$ |
 
 证明一个代数系统是阿贝尔群，也可以通过逐一验证每一个性质。
 
