--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -68,12 +68,12 @@
 
 **群**（Group）(G, ∙ )，其中 G 为元素集合， ∙ 是定义在 G 上的二元运算，满足下面的**四个性质**：
 
-| 性质       | 含义                                                                                                          |
-| ---------- | ------------------------------------------------------------------------------------------------------------- |
-| 封闭性     | 对 $\forall a,b\in G$，有 $a\cdot b\in G$                                                                     |
-| 结合律     | 对 $\forall a,b,c\in G$，有 $(a\cdot b)\cdot c=a\cdot(b\cdot c)$                                              |
-| 存在单位元 | $\exists e\in G$，使得对于 $\forall a\in G$，有 $e\cdot a=a\cdot e=a$，称 $e$ 为 $G$ 的单位元                 |
-| 可逆性     | 对 $\forall a\in G$，$\exists b\in G$ 满足 $a\cdot b=b\cdot a=e$，其中 $b$ 称为 $a$ 的逆元，表示成 $b=a^{-1}$ |
+|    性质    |                                                     含义                                                      |
+| :--------: | :-----------------------------------------------------------------------------------------------------------: |
+|   封闭性   |                                   对 $\forall a,b\in G$，有 $a\cdot b\in G$                                   |
+|   结合律   |                       对 $\forall a,b,c\in G$，有 $(a\cdot b)\cdot c=a\cdot(b\cdot c)$                        |
+| 存在单位元 |         $\exists e\in G$，使得对于 $\forall a\in G$，有 $e\cdot a=a\cdot e=a$，称 $e$ 为 $G$ 的单位元         |
+|   可逆性   | 对 $\forall a\in G$，$\exists b\in G$ 满足 $a\cdot b=b\cdot a=e$，其中 $b$ 称为 $a$ 的逆元，表示成 $b=a^{-1}$ |
 
 注：
 
@@ -153,9 +153,9 @@
 
 首先，这个代数系统需要是一个群（需要满足群的四个性质），此外，如果它还满足**交换律**，那么它称为阿贝尔群。
 
-| <div style="width:150px">性质</div> |      <div style="width:650px">含义</div>      |
-| :---------------------------------: | :-------------------------------------------: |
-|               交换律                | 对 $\forall a,b\in G$，有 $a\cdot b=b\cdot a$ |
+|  性质  |                     含义                      |
+| :----: | :-------------------------------------------: |
+| 交换律 | 对 $\forall a,b\in G$，有 $a\cdot b=b\cdot a$ |
 
 证明一个代数系统是阿贝尔群，也可以通过逐一验证每一个性质。
 
@@ -457,3 +457,36 @@ $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} \m
 $(\Bbb Z_{p}, +,\cdot)$ 是域。其中 $p$ 为素数。
 
 ## Chapter 4. 整数理论
+
+在这一小节里面，我们将会学习整数理论，它包括很多与整数相关的**定理和性质**，需要我们在题目中灵活应用，也是后面章节的**重要基础**。
+
+整数理论可以出的题目有很多，有些题目很难在第一次遇见时就想到**解题思路**；没关系，只要我们把学到的这些题目的思路和方法都弄懂，在期末考试中也一定能发挥出优秀的水平。
+
+这两个符号，我们一定都认识：
+
+$\Bbb Z$：整数集合，$\Bbb Z^{+}$：正整数集合。
+
+可以再顺带复习一下上一节中，$\Bbb Z_{n}$、$\Bbb Z^{*}_{n}$、$Mat_{n}(\Bbb R)$、$GL(n,\Bbb R)$、$S_{n}$ 的含义。
+
+### 1. 整除性
+
+#### 1.1 整除的定义
+
+**整除**的定义：$\forall a,b\in\Bbb Z$，其中 $b\not=0$，如果 $\exists q\in\Bbb Z$ 满足：$a=bq$，就说 $b$ 整除 $a$，记作 $b\mid a$；$b$ 叫做 $a$ 的因数（或因子），$a$ 叫做 $b$ 的倍数。
+
+如果符合上面条件的整数 $q$ 不存在，则说 $b$ 不整除 $a$，记作 $b\nmid a$.
+
+#### 1.2 整除的基本性质
+
+整除的定义很好理解，关键是整除性质的理解和使用。
+
+我们先来看一下整除有哪些**基本性质**：
+
+!!! example "整除的基本性质"
+
+    1. 传递性：如果 $c\mid b$，$b\mid a$，则 $c\mid a$.
+    2. 如果 $b\mid a$，则 $cb\mid ca$.
+    3. 如果 $c\mid a,\ c\mid b$，则对 $\forall m,n\in\Bbb Z$，有 $c\mid ma+nb$.
+    4. 如果 $b\mid a$ 且 $a\not=0$，则 $|b|\leq |a|$.
+    5. 如果 $cb\mid ca$，$c\not=0$，则 $b\mid a$.
+    6. 如果 $b\mid a$，$a\not=0$，则 $\frac{a}{b}\mid a$.
