--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -460,7 +460,7 @@ $(\Bbb Z_{p}, +,\cdot)$ 是域。其中 $p$ 为素数。
 
 在这一小节里面，我们将会学习整数理论，它包括很多与整数相关的**定理和性质**，需要我们在题目中灵活应用，也是后面章节的**重要基础**。
 
-整数理论可以出的题目有很多，有些题目很难在第一次遇见时就想到**解题思路**；没关系，只要我们把学到的这些题目的思路和方法都弄懂，在期末考试中也一定能发挥出优秀的水平。
+整数理论可以出的题目有很多，其中，大部分是**证明题**，会反复应用学到的定理和性质，有些题目很难在第一次遇见时就想到**解题思路**；没关系，只要我们把学到的这些题目的思路和方法都弄懂，在期末考试中也一定能发挥出优秀的水平。
 
 这两个符号，我们一定都认识：
 
@@ -484,9 +484,60 @@ $\Bbb Z$：整数集合，$\Bbb Z^{+}$：正整数集合。
 
 !!! example "整除的基本性质"
 
-    1. 传递性：如果 $c\mid b$，$b\mid a$，则 $c\mid a$.
+    1. 如果 $c\mid b$，$b\mid a$，则 $c\mid a$.（传递性）
     2. 如果 $b\mid a$，则 $cb\mid ca$.
     3. 如果 $c\mid a,\ c\mid b$，则对 $\forall m,n\in\Bbb Z$，有 $c\mid ma+nb$.
     4. 如果 $b\mid a$ 且 $a\not=0$，则 $|b|\leq |a|$.
     5. 如果 $cb\mid ca$，$c\not=0$，则 $b\mid a$.
     6. 如果 $b\mid a$，$a\not=0$，则 $\frac{a}{b}\mid a$.
+    7. 如果 $c\mid a+b,\ c\mid a$，则 $c\mid b$.
+    ---
+    由(2.)和(5.)可得：如果 $c\not=0$，则 $b\mid a\Leftrightarrow cb\mid ca$.
+
+利用整除的定义，很容易证明这些性质，证明过程简要了解就可以了。
+
+??? question "如何证明整除的基本性质？"
+
+    === "性质1"
+
+        $c\mid b\Rightarrow b=cq_{1}$
+        $b\mid a\Rightarrow a=bq_{2}$
+        $\therefore a=cq_{1}q_{2}$
+        $c\not=0$
+        $\therefore c\mid a$
+
+    === "性质2"
+
+        $b\mid a\Rightarrow a=bq\Rightarrow ca=cbq$
+        $b\not=0,\ c\not=0\Rightarrow cb\not= 0$
+        $\therefore cb\mid ca$
+
+    === "性质3"
+
+        $c\mid a\Rightarrow a=cq_{1}$
+        $c\mid b\Rightarrow b=cq_{2}$
+        $ma+nb=mcq_{1}+ncq_{2}=c(mq_{1}+nq_{2})$
+        $\therefore c\mid ma+nb$
+
+    === "性质4"
+
+        $b\mid a\Rightarrow a=bq,\ b\not=0,\ q\in\Bbb Z$
+        $a\not=0,\ b\not=0,\ q\in\Bbb Z\Rightarrow q\not=0\Rightarrow |q|\geq 1\Rightarrow \cfrac{|a|}{|b|}\geq 1$
+        $\therefore |b|\leq |a|$
+
+    === "性质5"
+
+        $cb\mid ca,\ c\not=0,\ b\not=0\Rightarrow ca=cbq,\ c\not=0,\ b\not=0\Rightarrow a=bq,\ b\not=0$
+        $\therefore b\mid a$
+
+    === "性质6"
+
+        $b\mid a,\ a\not=0\Rightarrow a=bq\Rightarrow a=(\cfrac{a}{b})b,\ \cfrac{a}{b}\not=0,\ q=\cfrac{a}{b}\in\Bbb Z,\ b\in\Bbb Z$
+        $\therefore \cfrac{a}{b}\mid a$
+
+    === "性质7"
+
+        $c\mid a+b,\ c\mid a\Rightarrow a+b=mc,\ a=nc\Rightarrow b=(m-n)c,\ (m-n)\in\Bbb Z$
+        $\therefore c\mid b$
+
+下面，我们通过一些习题，了解一下本节中证明题的解法，主要应用前面介绍的整除的基本性质。
