--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -555,3 +555,67 @@ $\Bbb Z$：整数集合，$\Bbb Z^{+}$：正整数集合。
         $\therefore c\mid b$
 
 下面，我们通过一些习题，了解一下本节中证明题的解法，主要应用前面介绍的整除的基本性质。
+
+???+ note "习题 3."
+
+    === "题目"
+
+        证明：若 $m-p\mid (mn+qp)$，则 $m-p\mid (mq+np)$.
+
+    === "思路"
+
+        在这类“给定了一部分整除条件，要证明一个整除结论”的题目中，**性质 3** 的应用是常见的。
+
+        性质 3：如果 $c\mid a,\ c\mid b$，则对 $\forall m,n\in\Bbb Z$，有 $c\mid ma+nb$.
+
+        对于这道题目而言，要证明 $m-p\mid (mq+np)$，并且给出了 $m-p\mid (mn+qp)$ 这个条件，问题的关键就转化为：**找到 $m-p$ 的另一个倍数**。
+
+        观察 $mn+qp$ 和 $mq+np$，容易发现**二者作差**可以得到另一个倍数，从而问题得解。
+
+    === "解答"
+
+        证明：
+
+        $(mn+qp)-(mq+np)=mn-mq+qp-np=m(n-q)-p(n-q)=(m-p)(n-q)$
+
+        要证：$m-p\mid (mq+np)$
+
+        只需证：$m-p\mid (mn+qp)-(m-p)(n-q)$
+
+        又由：$m-p\mid (mn+qp)$，$m-p\mid (m-p)(n-q)$
+
+        $\therefore m-p\mid (mn+qp)-(m-p)(n-q)$（性质 3）
+
+        即：$m-p\mid (mq+np)$
+
+        证毕。
+
+在“习题 3.”中，我们找到了性质 3“如果 $c\mid a,\ c\mid b$，则对 $\forall m,n\in\Bbb Z$，有 $c\mid ma+nb$”，所需条件中的 $a$ 和 $b$，并通过作差，确定了此性质中的 $m$ 和 $n$ 在本题中的值分别为 1 和 -1.
+
+还有一类题目会给出所需条件中的 $a$ 和 $b$，但性质中的 $m$ 和 $n$ 需要设法构造，例如：“习题 4\*.”。
+
+??? tip "习题 4\*."
+
+    === "题目"
+
+        若 $p\mid (10a-b)$ 和 $p\mid (10c-d)$，则 $p\mid (ad-bc)$.
+
+    === "思路"
+
+        看到题目的样式，可以想到使用性质 3；又因为已经给出了 $p$ 的两个倍数，证明的关键转化为：
+
+        找到性质 3“如果 $c\mid a,\ c\mid b$，则对 $\forall m,n\in\Bbb Z$，有 $c\mid \color{red}{m}\color{black}{a+}\color{red}{n}\color{black}{b}$”中的 $m$ 和 $n$ 的值。
+
+        思考一下，$m$ 和 $n$ 是多少的时候，最容易消除 $(10a-b)$ 和 $(10c-d)$ 中数字 10 产生的影响，得到我们需要的 $(ad-bc)$ 呢？
+
+    === "解答"
+
+        证明：
+
+        $ad-bc=(10a-b)\color{red}{c}\color{black}{+(10c-d)}\color{red}{(-a)}$
+
+        又由：$p\mid (10a-b)$，$p\mid (10c-d)$
+
+        可得：$p\mid (ad-bc)$
+
+        证毕。
