--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -594,11 +594,11 @@ $\Bbb Z$：整数集合，$\Bbb Z^{+}$：正整数集合。
 
 还有一类题目会给出所需条件中的 $a$ 和 $b$，但性质中的 $m$ 和 $n$ 需要设法构造，例如：“习题 4\*.”。
 
-??? tip "习题 4\*."
+???+ tip "习题 4\*."
 
     === "题目"
 
-        若 $p\mid (10a-b)$ 和 $p\mid (10c-d)$，则 $p\mid (ad-bc)$.
+        证明：若 $p\mid (10a-b)$ 和 $p\mid (10c-d)$，则 $p\mid (ad-bc)$.
 
     === "思路"
 
@@ -606,7 +606,7 @@ $\Bbb Z$：整数集合，$\Bbb Z^{+}$：正整数集合。
 
         找到性质 3“如果 $c\mid a,\ c\mid b$，则对 $\forall m,n\in\Bbb Z$，有 $c\mid \color{red}{m}\color{black}{a+}\color{red}{n}\color{black}{b}$”中的 $m$ 和 $n$ 的值。
 
-        思考一下，$m$ 和 $n$ 是多少的时候，最容易消除 $(10a-b)$ 和 $(10c-d)$ 中数字 10 产生的影响，得到我们需要的 $(ad-bc)$ 呢？
+        思考一下，$m$ 和 $n$ 分别是多少的时候，最容易消除 $(10a-b)$ 和 $(10c-d)$ 中数字 10 产生的影响，得到我们需要的 $(ad-bc)$ 呢？
 
     === "解答"
 
@@ -619,3 +619,9 @@ $\Bbb Z$：整数集合，$\Bbb Z^{+}$：正整数集合。
         可得：$p\mid (ad-bc)$
 
         证毕。
+
+#### 1.3 整除的两个定理
+
+下面，我们再了解一下整除的两个定理，它们分别对于证明和计算，是可能有帮助的。
+
+!!! example "定理 1"
