添加 脑认知与智能计算 课程

--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -625,3 +625,15 @@ $\Bbb Z$：整数集合，$\Bbb Z^{+}$：正整数集合。
 下面，我们再了解一下整除的两个定理，它们分别对于证明和计算，是可能有帮助的。
 
 !!! example "定理 1"
+
+    === "定理"
+
+
+
+设 $a,b\in\Bbb Z$，其中 $b\gt 0$，则唯一 $\exists q,r\in\Bbb Z$，满足下式：$a=bq+r,\ 0\leq r\lt b$.
+
+其中:
+
+$q$ 称为 $a$ 被 $b$ 除得到的**不完全商**；
+
+$r$ 称为 $a$ 被 $b$ 除所得到的**余数**（或非负最小剩余），记作 $a\ mod\ b=r$，《数论讲义》中记为 $<a>_{b}=r$. 。
