添加 计算机取证 课程

--- a/docs/脑认知与智能计算.md
+++ b/docs/脑认知与智能计算.md
@@ -4,7 +4,8 @@
 
 !!! danger "正在更新……"
 
-    随课更新。
+    本笔记随课更新。
+
     2023-2024学年度秋季学期。
 
 ---
@@ -47,3 +48,9 @@
 
 1. HH 模型：一个经典（1952）的模型。通过测量巨型鱿鱼轴突中动作电位对不同电流反应拟合出的模型。由一组四个常微分方程组成，对生物神经元多个特性描述较为准确但计算复杂。
 2. LIF 模型：是一种对 HH 模型的简化。为获得瞬时电压与输入电流的关系运用了电学相关理论。
+
+介绍了神经网络神经学习。
+
+介绍了当前研究热点。
+
+---
