--- a/docs/计算机取证.md
+++ b/docs/计算机取证.md
@@ -9,3 +9,97 @@
     2023-2024学年度秋季学期。
 
 ---
+
+## Chapter 1. 概述 Forensics-Intro
+
+### 1. 课程简介
+
+一门需要**动手**的课程。
+
+需要综合的计算机知识：计算机硬件、计算机操作系统、计算机网络等。
+
+成绩：14% 出勤 + 56% 实验（期末答辩） + 30% 期末报告。
+
+如果操作不当，你可能会因此**破坏**电脑硬盘，因此需要谨慎和仔细一些，带几个 U 盘，并且安装 WinHex 等磁盘工具。
+
+不过没关系，毕竟软件没了也是可以重新装的！旧的不去新的不来（？）
+
+### 2. 小引
+
+一个**电信网络诈骗**案，侵犯公民个人信息的电信诈骗犯罪事件。
+
+??? question "关于 2016 年徐玉玉案"
+
+    === "被骗经过"
+
+        2016年高考，徐玉玉以568分的成绩被南京邮电大学录取。19日下午4点30分左右，她接到了一通陌生电话，对方声称有一笔2600元助学金要发放给她。在这通陌生电话之前，徐玉玉曾接到过教育部门发放助学金的通知。“18日，女儿接到了教育部门的电话，让她办理了助学金的相关手续，说钱过几天就能发下来。”徐玉玉的母亲李自云告诉记者，**由于前一天接到的教育部门电话是真的**，所以当时他们并没有怀疑这个电话的真伪。
+
+        **正是这种时间衔接的紧凑性，使得人们很容易降低警惕，轻信通过盗取个人信息进行诈骗的犯罪分子。**
+
+        按照对方要求，徐玉玉将准备交学费的9900元打入了骗子提供的账号。
+
+        发现被骗后，徐玉玉万分难过，当晚就和家人去派出所报了案。
+
+        让徐连彬觉得倍感后悔的是，自己最后向民警询问“钱还能不能追回来”，民警回答“会尽力但是可能性不大”。徐连彬认为，可能是这个问题刺激到了本已非常自责的徐玉玉。
+
+        在回家的路上，徐玉玉突然晕厥，不省人事，虽经医院全力抢救，但仍没能挽回她18岁的生命。
+
+    === "判决结果"
+
+        2017年7月19日上午，山东省临沂市中级人民法院对被告人陈文辉、郑金锋、黄进春、熊超、陈宝生、郑贤聪、陈福地**诈骗、侵犯公民个人信息**案一审公开宣判。
+
+    === "电信网络诈骗态势"
+
+        [中国移动：2022年电信网络诈骗态势分析报告](https://mp.weixin.qq.com/s?__biz=MzIzMDQyMTk5OA==&mid=2247496328&idx=2&sn=c05df93d6620dca22028298ead24bbe8&chksm=e8b11609dfc69f1f31e0e838a63dc577664ee8c51c991a69117f83e4f9cba5c2b02893719868&scene=27).
+
+        缅北地区：[环球时报：重大战果！1207名缅北电诈嫌疑人移交我方](https://baijiahao.baidu.com/s?id=1776440115309717112&wfr=spider&for=pc).
+
+### 3. 数字证据
+
+要想对犯罪分子进行调查，就要进行**取证**。其中，**数字证据**（Digital Evidence）也是重要的信息。
+
+数字证据的来源是**非常多样**的，比如计算机系统（本地硬盘的存储文件，就比如一个文件的文件名、创建时间，都可以提供大量的信息）、通信系统（比如一个邮件的发送过程，就可以在服务器上存储着发送者的 ip 地址信息）、嵌入式系统（短信、微信、公交卡、可能提供行动轨迹的导航系统、公共监控系统）等。
+
+证据特性：
+
+- 证据应当具有证明力和证明能力。
+- 具体表现为客观性、关联性和合法性。
+  - **客观性**是证据的本质特征，它要求证据必须是客观存在的事实材料，而不是主管猜测或臆想的东西。首先它的本质是事实，一种是诸如物品、痕迹、文件等客观存在的物质；一种是被人们感知并存入记忆的事实（目击证人）。
+  - **关联性**是指证据必须与待证事实有内在和必然的联系。
+  - **合法性**是指证据的收集与提供应当依照法定程序。
+
+??? question "证据特性的拓展故事"
+
+    === "客观性"
+
+        记忆的选择性与偏差：亲眼见到的，并不一定就是事实[1]。
+
+        人们常说，耳听为虚，眼见为实，但心理学家经过研究发现：人的记忆也会有犯错误的时候，人们常常会通过一定的方式来解释自己经历过的人或事，并很难区分实际发生的事与经过自己推理而觉得理所当然的事。特别是当发生某件事情，许多目击者被同时询问时，总是有一个人占据主导地位，他的记忆会影响甚至推翻另一个性格较弱者的记忆，由于目击者记忆内容的差异会让性格较弱者产生自我怀疑，从而破坏其信心，进而怀疑自己的记忆能力。有时，这种记忆扭曲的现象会导致很严重的后果。
+
+        在1977年，美国就曾经发生过这样一起事件：美国联邦法庭指证威廉〃杰克逊犯有强奸罪，法庭的依据是当事人的证词。虽然威廉〃杰克逊再三声称自己冤枉，但在当事人非常肯定的指认下，罪名成立了。5年后，真正的罪犯爱德华〃杰克逊落网了，他和受冤枉者同姓，相貌也很相似，结果酿成了这起冤案。
+
+        [1]
+        作者：路人甲的自我修养
+        链接：https://www.zhihu.com/question/323086170/answer/674276719
+        来源：知乎
+
+    === "关联性"
+
+        > “他们就是打算就我没有做过的事把我处决……他们需要做的只是检验那支枪。但是，当你自认为有权有势、可以凌驾于法律之上，你就对普通人不屑一顾。但是，我要告诉每一个让我沦为死囚的人：人在做，天在看。”————安东尼·雷·欣顿
+
+        1985年，亚拉巴马州伯明翰市发生快餐店持枪抢劫案，两名餐厅经理遭枪杀。警方当时没有找到目击证人和指纹证据。稍后发生另一起餐馆持枪抢劫案，一名受害人指认欣顿为嫌疑人。[2]
+
+        警方在欣顿家中发现一支9毫米口径转轮手枪，枪主为欣顿的母亲。**经过证物鉴定，检方得出结论，上述案件中发射的6发子弹都出自这支手枪，从而认定欣顿为凶手。**（此例中，关联性不是客观的）。
+
+        庭审过程中，欣顿提出不在场证据，说后一起劫案发生时，他正在距离罪案现场数十公里外的地方上班，而且有同事为他作证。不过，他的不在场证据未获采信。
+
+        1986年，法庭认定欣顿谋杀罪名成立，判处他死刑。
+
+        欣顿提出上诉。去年，美国最高法院认定，案件审理过程中，欣顿未获得充分辩护，因而必须重审。再次鉴定证据后，亚拉巴马州检方本月1日认定证据不足，决定撤诉。2日，杰斐逊县巡回法院法官下令释放欣顿。
+
+        [2]
+        作者：惠晓霜
+        链接：https://world.huanqiu.com/article/9CaKrnJJB0W
+        来源：新闻晨报
+
+    ===
