--- a/docs/计算机取证.md
+++ b/docs/计算机取证.md
@@ -72,7 +72,7 @@
 
     === "客观性"
 
-        记忆的选择性与偏差：亲眼见到的，并不一定就是事实[1]。
+        > 记忆的选择性与偏差：亲眼见到的，并不一定就是事实[1]。
 
         人们常说，耳听为虚，眼见为实，但心理学家经过研究发现：人的记忆也会有犯错误的时候，人们常常会通过一定的方式来解释自己经历过的人或事，并很难区分实际发生的事与经过自己推理而觉得理所当然的事。特别是当发生某件事情，许多目击者被同时询问时，总是有一个人占据主导地位，他的记忆会影响甚至推翻另一个性格较弱者的记忆，由于目击者记忆内容的差异会让性格较弱者产生自我怀疑，从而破坏其信心，进而怀疑自己的记忆能力。有时，这种记忆扭曲的现象会导致很严重的后果。
 
@@ -102,4 +102,43 @@
         链接：https://world.huanqiu.com/article/9CaKrnJJB0W
         来源：新闻晨报
 
-    ===
+    === "合法性"
+
+        > “女子还活着，只要你说了，就可以出去了。”————诱供片段
+
+        呼格吉勒图案又称呼格吉勒图冤杀案，是一起在中国引起了广泛关注的冤案。
+
+        1996年4月9日，在呼和浩特第一毛纺厂家属区公共厕所内，一女子被强奸杀害（4·9毛纺厂女厕女尸案）。公安机关认定报案人**呼格吉勒图**是凶手。1996年4月10日凌晨0点，警察开始殴打呼格吉勒图，进行逼供。
+
+        **呼格无奈招供。**
+
+        5月23日，呼格吉勒图被判死刑，剥夺政治权利终身。呼格吉勒图不服，提出上诉。6月5日，内蒙古自治区高级人民法院驳回上诉，维持原判。1996年6月10日，呼格吉勒图被执行死刑。
+
+        2005年10月23日，**赵志红**承认在第一毛纺厂家属区公共厕所内杀害了一名女性。2006年，内蒙古司法机构组织了专门的调查组复核此案。2007年1月1日，赵志红的死刑被临时叫停。
+
+        2014年11月20日，呼格吉勒图案进入再审程序。12月15日，内蒙古自治区高级人民法院对再审判决宣告原审被告人呼格吉勒图无罪，之后启动追责程序和国家赔偿。12月30日，内蒙古高院依法作出国家赔偿决定，决定支付李三仁、尚爱云国家赔偿金共计2059621.40元。
+
+        2019年7月30日，内蒙古自治区呼和浩特市中级人民法院遵照最高人民法院院长签发的执行死刑命令，对罪犯赵志红执行死刑。最高人民法院刑五庭负责人就赵志红死刑复核一案答记者问称，证据不足，不予确定。
+
+        终判内容：再审判决主要内容：一、撤销内蒙古高级人民法院（1996）内刑终字第199号刑事裁定和呼和浩特市中级人民法院（1996）呼刑初字第37号刑事判决；二、**原审被告人呼格吉勒图无罪**。
+
+        此例的关键问题在于，当时警方的急功冒进及**刑讯逼供**，案件发生时全国正处于严打时期，致使警方急功冒进（破坏了取得证据的**合法性**）。
+
+数字证据特性：
+
+- 无形性：计算机证据**不是肉眼直接可见**的，必须借助适当的工具。
+- 易复制性：数字证据通常可以被精确地**复制**，副本和原本具有高度的一致性。
+- 大量性、多样性：数字证据往往杂乱地**混杂于大量的数字信息**中。
+- 脆弱性：搜集证据可能会对证据造成**修改**（打开文件）；犯罪分子故意修改或者删除数字证据。
+
+### 4. 取证的历史发展过程
+
+> 取证的过程也是和人类发展历史相一致的过程。
+
+取证历史发展的几个阶段：
+
+- 神证阶段：利用**神**来帮助查明案情和裁决。
+  利用人们对**神的力量的敬畏**，解决了无法判定原告和被告陈述真假的问题，不敢宣誓者、或宣誓中慌乱的即为假。
+  双方都敢于向神宣誓，就使用**神判法**。
+- 人证阶段：利用证人、当事人、特别是被告人的口供来审案。
+- 物证阶段：利用能够证明案件真实情况的一切**物品痕迹**来进行审案。（是随着人类科技的发展而产生的）
