--- a/docs/计算机取证.md
+++ b/docs/计算机取证.md
@@ -85,7 +85,7 @@
 
     === "关联性"
 
-        > “他们就是打算就我没有做过的事把我处决……他们需要做的只是检验那支枪。但是，当你自认为有权有势、可以凌驾于法律之上，你就对普通人不屑一顾。但是，我要告诉每一个让我沦为死囚的人：人在做，天在看。”————安东尼·雷·欣顿
+        > “他们就是打算就我没有做过的事把我处决……他们需要做的只是检验那支枪。但是，当你自认为有权有势、可以凌驾于法律之上，你就对普通人不屑一顾。但是，我要告诉每一个让我沦为死囚的人：人在做，天在看。”——安东尼·雷·欣顿
 
         1985年，亚拉巴马州伯明翰市发生快餐店持枪抢劫案，两名餐厅经理遭枪杀。警方当时没有找到目击证人和指纹证据。稍后发生另一起餐馆持枪抢劫案，一名受害人指认欣顿为嫌疑人。[2]
 
@@ -104,7 +104,7 @@
 
     === "合法性"
 
-        > “女子还活着，只要你说了，就可以出去了。”————诱供片段
+        > “女子还活着，只要你说了，就可以出去了。”——诱供片段
 
         呼格吉勒图案又称呼格吉勒图冤杀案，是一起在中国引起了广泛关注的冤案。
 
