更新 计算机取证

--- a/docs/计算机取证.md
+++ b/docs/计算机取证.md
@@ -142,3 +142,54 @@
   双方都敢于向神宣誓，就使用**神判法**。
 - 人证阶段：利用证人、当事人、特别是被告人的口供来审案。
 - 物证阶段：利用能够证明案件真实情况的一切**物品痕迹**来进行审案。（是随着人类科技的发展而产生的）
+
+审讯问案法：
+
+- 为了防止过度逼供，唐朝法律规定对同一名囚犯实施拷讯不超过三次，拷打总数不超过二百。
+- 南宋郑克反对酷刑拷打，继承了“以五声听狱讼”之法，认为问案时要注意分析事务的情理。
+- 缺点就是促进了刑讯逼供的发展。（宋朝时出现了十分残酷的刑讯手段）
+- 请君入瓮的故事：
+  - 刑讯逼供专家：武则天两个酷吏，周兴和来俊臣的故事。
+
+### 计算机取证
+
+计算机在犯罪中的三种角色：
+
+- 黑客入侵的目标
+- 作案的工具
+- 犯罪信息的存储器
+
+计算机取证方法：
+
+1. 来源取证：确定犯罪嫌疑人或者证据的来源
+   - IP 地址取证：确定与犯罪相关的 IP 地址信息
+2. 事实取证：取得与证明案件事实相关的证据
+   - 文件内容调查：在存储设备中取得文本、图片、音频视频、网页、电子邮件等的相关文件的内容。包括这些文件被删除以后、文件系统被格式化后或者数据恢复以后的文件内容。
+   - 使用痕迹调查：windows 运行的痕迹、上网记录的调查、Office、realplay 和 mediaplay 的播放列表及其它应用软件使用历史记录。
+   - 软件功能分析：主要针对特定软件和程序的性质和功能进行分析，常见是对恶意代码的分析，确定其破坏性、传染性等特征。
+   - 软件相似性分析：比较两软件，找出两者之间是否存在实质性相似的证据。此类取证方法主要在软件知识产权相关案件中使用。
+   - 日志文件分析。
+   - 网络数据包分析：通过分析网络中传输的数据包发现相关证据的过程。
+
+计算机取证重要原则：
+
+- 尽早取证
+- 保证数据完整性（要在备份数据上进行分析，不要在原数据上分析）
+- 取证过程必须收到监督
+- 记录每一个取证过程和原因
+
+计算机取证过程：
+
+1. 准备阶段
+   调查前，准备好所需设备和工具（大容量磁盘驱动器、电缆、引导盘、笔记本电脑、照相机等）引导盘的作用：防止电脑启动导致的日志文件等的产生。
+2. 收集和保存
+   - 搜索和定位计算机证据，制定保护和调查计划；确定计算机型号等；
+   - 保护和评估现场；
+   - 对现场记录、归档；
+   - 证据提取。
+3. 检验和分析
+   - 搜索目标系统：包括现存的正常文件，已经被删除但仍存在于磁盘上的文件（尽量恢复），隐藏文件，受到密码保护的文件和加密文件（破解密码）、临时文件和交换文件（查看：页面交换文件 pagefile.sys）；
+   - ![Alt text](../pics/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8F%96%E8%AF%81/1.png)
+   - ![Alt text](../pics/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8F%96%E8%AF%81/2.png)
+   - 其他区域数据：所谓的未分配的磁盘空间（查看：用磁盘管理器）；文件中的“slack”空间（查看：打开任何一个文件）。
+4. 提交报告
