--- a/docs/计算机取证.md
+++ b/docs/计算机取证.md
@@ -189,7 +189,7 @@
    - 证据提取。
 3. 检验和分析
    - 搜索目标系统：包括现存的正常文件，已经被删除但仍存在于磁盘上的文件（尽量恢复），隐藏文件，受到密码保护的文件和加密文件（破解密码）、临时文件和交换文件（查看：页面交换文件 pagefile.sys）；
-   - ![Alt text](../pics/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8F%96%E8%AF%81/1.png)
-   - ![Alt text](../pics/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8F%96%E8%AF%81/2.png)
+   - ![Alt text](https://github.com/ChestnutSilver/TJIS-My-Helloworld/blob/main/pics/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8F%96%E8%AF%81/1.png)
+   - ![Alt text](https://github.com/ChestnutSilver/TJIS-My-Helloworld/blob/main/pics/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8F%96%E8%AF%81/2.png)
    - 其他区域数据：所谓的未分配的磁盘空间（查看：用磁盘管理器）；文件中的“slack”空间（查看：打开任何一个文件）。
 4. 提交报告
