--- a/docs/计算机取证.md
+++ b/docs/计算机取证.md
@@ -151,7 +151,7 @@
 - 请君入瓮的故事：
   - 刑讯逼供专家：武则天两个酷吏，周兴和来俊臣的故事。
 
-### 计算机取证
+### 5. 计算机取证
 
 计算机在犯罪中的三种角色：
 
@@ -192,4 +192,36 @@
    - ![Alt text](https://github.com/ChestnutSilver/TJIS-My-Helloworld/blob/main/pics/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8F%96%E8%AF%81/1.png)
    - ![Alt text](https://github.com/ChestnutSilver/TJIS-My-Helloworld/blob/main/pics/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8F%96%E8%AF%81/2.png)
    - 其他区域数据：所谓的未分配的磁盘空间（查看：用磁盘管理器）；文件中的“slack”空间（查看：打开任何一个文件）。
-4. 提交报告
+4. 提交报告：对案件的分析检验结果汇总提交。
+
+## Chapter 2. 概述 Forensics-boot
+
+### 1. CPU
+
+CISC/RISC/EPIC 复杂、简单、并行指令集：
+
+1. CISC：X86、X64。
+2. RISC：IBM 的 John Cocke、加州大学的 David Patterson。
+   主要用于服务器，并发提高速度；嵌入式设备；RISC-V、LoongArch（龙芯中科）。
+3. EPIC：Intel IA-64，并不兼容 X86。
+
+### 2. BIOS
+
+BIOS 程序储存位置：
+
+1. ROM：需要烧制写入；
+2. EPROM：有一个窗口供紫外线擦除和写入；
+3. EEPROM：写入需设置跳线开关；
+4. NOR-Flash：可以 Flash 内运行代码；后来东芝开发了储存量更大的 NAND-Flash。
+
+Nor Flash 厂商。
+
+计算机系统启动流程：
+
+1. 计算机系统启动：计算机硬件启动、计算机操作系统启动；
+2. 有两种主要方式：BIOS、EFI(UEFI)BIOS；
+3. 启动主要厂商：Award、phoenix、AMI。
+
+现在主流是 UEFI 方式，但支持 BIOS 方式，可以在启动时候设置。
+
+win10 启动流程(BIOS)：计算机硬件启动、从 MBR 寻找硬盘活动分区、从活动分区的 PBR 找该分区 Bootmgr、该分区的/boot/BCD 文件、……
